exports[`RangeInput applies translations 1`] = `
<form
  className="RangeInput"
  onSubmit={[Function anonymous]}>
  <label
    className="RangeInput__labelMin">
    <input
      className="RangeInput__labelMin__input"
      onChange={[Function onChange]}
      type="number"
      value={0} />
  </label>
  <span
    className="RangeInput__separator">
    SEPARATOR
  </span>
  <label
    className="RangeInput__labelMax">
    <input
      className="RangeInput__labelMax__input"
      onChange={[Function onChange]}
      type="number"
      value={100} />
  </label>
  <button
    className="RangeInput__submit"
    type="submit">
    SUBMIT
  </button>
</form>
`;

exports[`RangeInput supports passing max/min values 1`] = `
<form
  className="RangeInput"
  onSubmit={[Function anonymous]}>
  <label
    className="RangeInput__labelMin">
    <input
      className="RangeInput__labelMin__input"
      onChange={[Function onChange]}
      type="number"
      value={0} />
  </label>
  <span
    className="RangeInput__separator">
    to
  </span>
  <label
    className="RangeInput__labelMax">
    <input
      className="RangeInput__labelMax__input"
      onChange={[Function onChange]}
      type="number"
      value={100} />
  </label>
  <button
    className="RangeInput__submit"
    type="submit">
    go
  </button>
</form>
`;
